<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CardDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_Card_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.popupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_card_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_name"
                        android:inputType="text"
                        android:textSize="18sp"
                        tools:text = "Test"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_color"
                android:textColor="@color/lightGrey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_select_label_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_color"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/members"
                android:textColor="@color/lightGrey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_select_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_members"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_selected_members_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                tools:visibility = "visible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textColor="@color/lightGrey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_select_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_due_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/update_card_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_rounded"
                android:textColor="@color/black"
                android:text="@string/update_card_details"/>

             </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>