<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signup_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_all"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_marginTop="@dimen/signup_activity_txt_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/signup_page_text1_size"
            android:text="@string/signup_txt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linear_layout1_margin">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/signup_card_margin_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_corner_radius">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_all"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name_signup_et"
                        android:layout_marginTop="@dimen/edit_txt_margin_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_signup"
                        android:textColor="@color/black"
                        android:textColorHint="@color/lightGrey"/>

                    <EditText
                        android:id="@+id/email_signup_et"
                        android:layout_marginTop="@dimen/edit_txt_margin_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_signup"
                        android:textColor="@color/black"
                        android:textColorHint="@color/lightGrey"/>

                    <EditText
                        android:id="@+id/passwprd_signup_et"
                        android:layout_marginTop="@dimen/edit_txt_margin_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_signup"
                        android:textColor="@color/black"
                        android:textColorHint="@color/lightGrey"/>

                    <Button
                        android:id="@+id/btn_sign_up_btn"
                        android:layout_margin="@dimen/signup_btn_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_btn"
                        android:textColor="@color/white"
                        android:background="@drawable/shape_button_rounded" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>